syntax = "proto3";

package hotel;

option go_package = ".;pb";

service HotelService {
    rpc GetHotelById(GetHotelByIdRequest) returns (GetHotelByIdResponse);
}

message GetHotelByIdRequest {
    string id = 1;
}

message GetHotelByIdResponse {
    string id = 1;
    string name = 2;
}